style: Adicionando responsividade

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <title>count.days</title>
   </head>
-  <body class="bg-zinc-950 text-zinc-100 antialiased pt-0.5">
+  <body class="bg-zinc-950 text-zinc-100 antialiased pt-0.5 relative flex flex-col items-center min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
